# API_Deployment

./: README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt  steps.md
drf_auth/: .env  settings.py
